--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,16 @@
-body {
+body, a {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color:floralwhite;
+  color: black;
+;
+}
+
+.pee {
+  text-align: center;
 }
 
 code {
